# docs/experimenter/openapi-schema.json
@@ -1237,6 +1237,35 @@
           "takeaways_summary": {
             "type": "string",
             "nullable": true
+          },
+          "conclusion_recommendations": {
+            "type": "string",
+            "readOnly": true
+          },
+          "project_impact": {
+            "enum": [
+              "HIGH",
+              "MODERATE",
+              "TARGETED"
+            ],
+            "type": "string",
+            "nullable": true
+          },
+          "next_steps": {
+            "type": "string",
+            "nullable": true
+          },
+          "reviewer_emails": {
+            "type": "string",
+            "readOnly": true
+          },
+          "editor_emails": {
+            "type": "string",
+            "readOnly": true
+          },
+          "jetstream_errors_count": {
+            "type": "string",
+            "readOnly": true
           }
         },
         "required": [
@@ -1279,6 +1308,14 @@
             "type": "boolean"
           },
           "owner": {
+            "type": "string",
+            "readOnly": true
+          },
+          "reviewer_emails": {
+            "type": "string",
+            "readOnly": true
+          },
+          "editor_emails": {
             "type": "string",
             "readOnly": true
           },
@@ -1471,6 +1508,10 @@
             "readOnly": true
           },
           "results_data": {
+            "type": "string",
+            "readOnly": true
+          },
+          "jetstream_errors_by_key": {
             "type": "string",
             "readOnly": true
           }
